crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing-10.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/nested/catch/all/route\")"
---
Some(
    Route {
        kind: CatchAll,
        module_file: "api/nested/[...id].rs",
        module_name: Ident(
            api_nested_____id_,
        ),
        path: "api/nested/[...id]",
        segments: Some(
            [
                "api",
                "nested",
                "[...id]",
            ],
        ),
    },
)
