crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing-11.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/optional/posts\")"
---
Some(
    Route {
        kind: Static,
        module_file: "api/optional/posts.rs",
        module_name: Ident {
            sym: api_optional_posts,
        },
        path: "api/optional/posts",
        segments: None,
    },
)
