crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing-14.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/optional\")"
---
Some(
    Route {
        kind: OptionalCatchAll,
        module_file: "api/optional/[[...id]].rs",
        module_name: Ident {
            sym: api_optional______id__,
        },
        path: "api/optional/[[...id]]",
        segments: Some(
            [
                "api",
                "optional",
                "[[...id]]",
            ],
        ),
    },
)
