crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing-15.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/optional/catch/all/route\")"
---
Some(
    Route {
        kind: OptionalCatchAll,
        module_file: "api/optional/[[...id]].rs",
        module_name: Ident(
            api_optional______id__,
        ),
        path: "api/optional/[[...id]]",
        segments: Some(
            [
                "api",
                "optional",
                "[[...id]]",
            ],
        ),
    },
)
