crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing-16.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/deep/nested/[id]/comments/[cid]\")"
---
Some(
    Route {
        kind: Dynamic,
        module_file: "api/deep/nested/[id]/comments/[cid].rs",
        module_name: Ident(
            api_deep_nested__id__comments__cid_,
        ),
        path: "api/deep/nested/[id]/comments/[cid]",
        segments: Some(
            [
                "api",
                "deep",
                "nested",
                "[id]",
                "comments",
                "[cid]",
            ],
        ),
    },
)
