crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing-17.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/should/be/caught/by/root/catch/all\")"
---
Some(
    Route {
        kind: CatchAll,
        module_file: "api/[...id].rs",
        module_name: Ident {
            sym: api_____id_,
        },
        path: "api/[...id]",
        segments: Some(
            [
                "api",
                "[...id]",
            ],
        ),
    },
)
