crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing-19.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/foo/[d]/bar/baz/[f]\")"
---
Some(
    Route {
        kind: Dynamic,
        module_file: "api/foo/[d]/bar/baz/[f].rs",
        module_name: Ident {
            sym: api_foo__d__bar_baz__f_,
        },
        path: "api/foo/[d]/bar/baz/[f]",
        segments: Some(
            [
                "api",
                "foo",
                "[d]",
                "bar",
                "baz",
                "[f]",
            ],
        ),
    },
)
