crates/vercel_runtime_router/src/snapshots/vercel_runtime_router__tests__dynamic_routing-20.snap
---
source: crates/vercel_runtime_router/src/lib.rs
expression: "router.call(\"api/github/ecklf/rust-at-home/releases/foo\")"
---
Some(
    Route {
        kind: Dynamic,
        module_file: "api/github/[owner]/[name]/releases/[release].rs",
        module_name: Ident(
            api_github__owner___name__releases__release_,
        ),
        path: "api/github/[owner]/[name]/releases/[release]",
        segments: Some(
            [
                "api",
                "github",
                "[owner]",
                "[name]",
                "releases",
                "[release]",
            ],
        ),
    },
)
